# agora-governance

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
agora_governance/agents/global_crits/: analyzer.py  global_crit.py
agora_governance/governance/: governance_layer.py  precedent_cli.py  precedent_db.py  voting.py
agora_governance/tests/: test_conflict_resolver.py  test_daily_coordination_fix.py  test_decision_logger.py  test_decision_validator.py  test_escalation_notifier.py  test_integration.py  test_permissions.py
examples/: basic_policy.json  spending_governance.py
src/audit/: precedent_store.py
src/core/: hitl_escalation.py  operation_classifier.py  trust_manager.py  voting.py
src/detectors/: hallucination_detector.py
